--- a/weather-data-viewer/src/app/weather-forecast/weather-forecast.component.html
+++ b/weather-data-viewer/src/app/weather-forecast/weather-forecast.component.html
@@ -1,1 +1,6 @@
-<p>weather-forecast works!</p>
+<div id="city">{{forecast.city}}</div>
+<app-line-charts
+  [weatherDataArray]="forecast.forecast"
+  [minTemp]="forecast.minTemp"
+  [maxTemp]="forecast.maxTemp">
+</app-line-charts>
